--- a/src/css/app.css
+++ b/src/css/app.css
@@ -77,6 +77,7 @@
     margin:8px 0 0 2%;
     border-radius:12px;
     border:1px solid #ccc;
+    cursor:pointer;
 }
 .memo:nth-child(3n+1) {
     margin-left:0;
@@ -113,5 +114,10 @@
     font-size:18px;
     font-weight:bold;
     background:none;
+    color:#bbb;
+    outline:none;
+}
+.memo__delete:hover {
+    font-size:24px;
     color:#000
 }
