수정 이벤트 추가

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -43,9 +43,10 @@
 }
 .container {
     position:relative;
-    padding:0 0 0 160px
+    /* padding:0 0 0 160px */
 }
 .side-menu {
+    display:none;
     position:absolute;
     left:0;
     top:20px;
